[package]
name = "lucky-flipkart-api"                       # ✅ Your unique crate name
description = "Flipkart API scraper with WhatsApp + affiliate integration"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/Lucky-Kandpal/lucky-flipkart-api"   # ✅ Your future GitHub repo
authors = ["Lucky Kandpal luckykandpal091@gmail.com"]
license = "MIT OR Apache-2.0"                     # ✅ Optional: dual-license or custom

[dependencies]
flipkart_scraper = { path = "https://github.com/dvishal485/flipkart-scraper", features = ["fetch"] }
serde = "1.0"
serde_json = "1.0"
axum = { version = "0.8.4" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
